[metadata]
name = dataset_utils
version = 0.1.0
description = A collection of scripts to translate some datasets I like to fit with YOLO's training format.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License


[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/bdd100k_generate.py
  bin/kitti_generate.py
